--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-language-detector": "1.0.0",
     "next-page-transitions": "^1.0.0-beta.2",
     "pre-commit": "^1.2.2",
+    "prettier": "^3.2.2",
     "prop-types": "^15.7.2",
     "react": "18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
